# mri_reconstruction

./: CMakeLists.txt  README.md  main.cpp
app/: main.cpp
src/ContextWindow/: controls.hpp  render.hpp
src/ContextWindow/shaders/: vert.shader
src/MRIFile/: MRIFile.cpp  Storage.hpp
